<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:contentDescription="@string/str_settings"
            app:icon="@drawable/ic_back"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:labelFor="@id/edt_number"
        android:text="@string/str_number_decimal_places"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_number"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:lines="1"
        android:maxLength="3"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_number"
        app:layout_constraintTop_toTopOf="@id/txt_number" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_round_up"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/str_round_up"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_number" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFC107"
        android:text="@string/str_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_remove"
        app:layout_constraintStart_toEndOf="@id/btn_add" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF5722"
        android:text="@string/str_remove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_edit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_one_vnd"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:text="@string/str_one_vnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_currency"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/str_zero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_one_vnd"
        app:layout_constraintEnd_toStartOf="@id/spinner_currency"
        app:layout_constraintStart_toEndOf="@id/txt_one_vnd"
        app:layout_constraintTop_toTopOf="@id/txt_one_vnd" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_currency"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/txt_one_vnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_currency"
        app:layout_constraintTop_toTopOf="@id/txt_one_vnd" />
</androidx.constraintlayout.widget.ConstraintLayout>
